# VyOS-Policy-Studio

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  shell.nix
src/: main.cpp
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  main.h  mainwindow.cpp
src/model/: types.h
src/model/firewall/: group.cpp  group.h
src/vyos/: CMakeLists.txt
src/vyos/model/firewall/: group.cpp
ui/: MainWindow.ui
